--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "flatiron_mantra = \"learn. love. code.\"\n",
-    "flatiron_mantra"
+    "flatiron_mantrakjhvkc"
    ]
   },
   {
